--- a/reports/ipods.Rmd
+++ b/reports/ipods.Rmd
@@ -11,6 +11,7 @@ El presente documento da respuesta a las siguientes preguntas sobre los IPODS en
 
 - Cuántos tenemos por tienda? Cuántos debemos tener?
 - Considerando su condición, cuál es la salud del parque operativo?
-- Cuál es el tiempo de vida promedio? 
+- Cuántos equipos han tenido reemplazo de batería? Posteriormente, cuántos fueron reintegrados? Cuántos fueron descartados?
 
-Para responder estas preguntas, usaremos la información disponible en el sistema de gestión de activos Snipe-IT. 
+Para responder estas preguntas, usaremos como fuente principal la información disponible en el sistema de gestión de activos Snipe-IT, implementado en Junio del 2021. 
+
