Load asset maintenances, condition and status logs.

--- a/ipods.Rmd
+++ b/ipods.Rmd
@@ -14,7 +14,7 @@ El presente documento responde las siguientes preguntas sobre nuestro parque ope
 
 - ¿Cuántos IPODs tenemos desplegados? ¿cuántos debemos tener? ¿cuántos nos hacen falta?
 - ¿En qué condición se encuentran los equipos desplegados? ¿cómo medimos la salud del parque operativo?
-- ¿Cuántos IPODs han tenido reemplazo de batería? De esos, ¿cuántos fueron reintegrados? ¿cuántos fueron descartados? ¿cuántos no han tenido reemplazo?
+- ¿Cuántos IPODs han ido a taller? ¿cuántos fueron reparados? ¿cuántos fueron descartados?
 
 Para responder estas preguntas, la fuente principal de información será el sistema de gestión de activos **Snipe-IT**, implementado en Junio del 2021. La información anterior a este período ha sido obtenida de los formularios de control, cuya data ha sido digitada en el sistema. 
 
@@ -32,31 +32,44 @@ requeridos <- sum(ipods$req_quantity)
 desplegados <- sum(ipods$total)
 necesitados <- requeridos-desplegados
 cobertura <- round((desplegados/requeridos)*100, digits = 2)
+mant <- load.asset_maintenances() %>% filter(category == "IPOD")
+reparados <- as.numeric(mant %>% filter(notes == "REPARADO") %>% count())
+descartados <- as.numeric(mant %>% filter(notes == "DESCARTADO") %>% count())
 ```
 
 Tenemos **`r desplegados`** equipos desplegados de un total de **`r requeridos`** equipos requeridos para la operación. Esto representa una cobertura de **`r cobertura`%**. Necesitamos desplegar **`r necesitados`** equipos para lograr el *100%* de cobertura operativa.
 
 La siguiente relación presenta la distribución de IPODs por localidad:
 
-`r ipods[,c(-1,-7)]`
+`r ipods[,c(-1, -3)]`
 
 ## ¿En qué condición se encuentran los equipos? 
 #### ¿cómo medimos la salud del parque operativo?
 
-Snipe-IT no maneja de forma natural un campo para la condición o estado de los equipos. Sin embargo, permite la creación de *custom fields* o campos customizados. Hemos creado un campo *condition* asignado a los IPODs, que toma valores según los siguientes criterios:
+Snipe-IT no maneja de forma natural un campo para la condición o estado de los equipos. Sin embargo, permite la creación de *custom fields*. Hemos creado un campo *condition* asignado a los equipos, que toma valores según los siguientes criterios:
 
-5 - Nuevo (no desplegado). 
+*5 - Nuevo* (no desplegado). 
 
-4 - Nuevo (desplegado). En excelente condiciones. 
+*4 - Nuevo (desplegado).* En excelente condiciones. 
 
-3 - En buenas condiciones. Su rendimiento es el esperado.
+*3 - En buenas condiciones.* Su rendimiento es el esperado.
 
-2 - En condiciones deficientes. Rendimiento disminuido. Presenta fallos.
+*2 - En condiciones deficientes.* Rendimiento disminuido. Presenta fallos.
 
-1 - En malas condiciones. No rinde lo esperado. No funciona.
+*1 - En malas condiciones.* No rinde lo esperado. No funciona.
 
-0 - Dañado. Descartado.
+*0 - Dañado.* Descartado.
+
+Para calcular la columna *health* establecemos el valor 3 como el requerido para operación en tienda. Dividimos la condición promedio de los equipos entre la condición requerida y lo multiplicamos por 100.
 
 
+## ¿Cuántos IPODs han ido a taller? 
+#### ¿cuántos fueron reparados? ¿cuántos fueron descartados?
 
-        
+A la fecha hemos llevado **`r nrow(mant)`** equipos a taller. Como resultado, **`r reparados`** equipos fueron *reparados* y reintegrados al parque, para un porcentaje de **`r round(reparados/nrow(mant)*100, digits = 2)`%**, mientras que **`r descartados`** fueron *descartados*, para un porcentaje de **`r round(descartados/nrow(mant)*100, digits = 2)`%**. 
+
+```{r}
+md <- mant %>% count(start_date, notes)
+md <- spread(md, notes, n, fill = 0)
+```
+
